Refactored to use value types from the domain instead of primitives.